[tool.poetry]
name = "fastapi-url-shortener"
version = "0.1.0"
description = ""
authors = ["aohus <dbtnghk528@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlmodel = "^0.0.4"
httpx = "^0.18.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
